feat: update css version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" itemprop="description" content="SukkaW's Project">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/spectre.css@0.5.3/dist/spectre.min.css,npm/spectre.css@0.5.3/dist/spectre-exp.min.css,npm/spectre.css@0.5.3/dist/spectre-icons.min.css,gh/sukkaw/suka.css@0.1.0/dist/suka.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/spectre.css@0.5.3,npm/spectre.css@0.5.3/dist/spectre-exp.min.css,npm/spectre.css@0.5.3/dist/spectre-icons.min.css,npm/suka.css@0.1.2">
     <meta property="og:title" content="SukkaW's Project">
     <style>
         .card .card-body {
