refactor: update favicon and avatar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Sukka's Project</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <link rel="shortcut icon" type="image/ico" href="https://cdn.suka.moe/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.suka.moe/favicon/favicon-32x32.png">
+    <link rel="shortcut icon" type="image/ico" href="https://cdn.jsdelivr.net/npm/skx@0.0.1/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/npm/skx@0.0.1/favicon/favicon-32x32.png">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" itemprop="description" content="SukkaW's Project">
@@ -27,7 +27,7 @@
 
 <body>
     <div class="container grid-lg sk-pt-8">
-        <img class="centered" src="https://cdn.suka.moe/avatar/sketch-rounded.png" width="80">
+        <img class="centered" src="https://cdn.jsdelivr.net/npm/skx@0.0.1/avatar/sketch-rounded.png" width="80">
         <h1 class="h2 text-center sk-mt-4">Sukka's Project</h1>
 
         <div class="columns sk-mt-5">
